fixed dropdown z-index so it will appear on top of other elements

--- a/app/stylesheets/redesign/miv/_dropdown.sass
+++ b/app/stylesheets/redesign/miv/_dropdown.sass
@@ -1,4 +1,5 @@
 .dropdown
+  z-index: 999
   display: none
   list-style: none
   width: 120px
